syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

import "Enum.proto";

message RoomInfo 
{
	int32 roomId = 1;
	int32 mapId = 2;
}

message StatInfo 
{
	float hp = 1;
	float maxHp = 2;
	float speed = 3;
	float attack = 4;
	float defence = 5;
	int32 criRate = 6;
	int32 criDamage = 7;
}

message PositionInfo 
{
	EObjectState state = 1;
	EMoveDir moveDir = 2;
	int32 posX = 3;
	int32 posY = 4;
}

message ObjectInfo 
{
	int32 objectId = 1;
	PositionInfo posInfo = 2;  
}

message CreatureInfo 
{
	ObjectInfo objectInfo = 1;
	StatInfo statInfo = 2;
	int32 stateFlag = 3;
}

message HeroInfo
{
	CreatureInfo creatureInfo = 1;
	int32 level = 2;
	string name = 3;
	EHeroGender gender = 4;
	EHeroClass classType = 5;
}

message MyHeroInfo
{
	HeroInfo heroInfo = 1;
	StatInfo baseStatInfo = 2;
	int32 exp = 3;
	int32 mapId = 4;
}